# desktop

./: .gitignore  BUILD_TOOLS_REVIEW.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLUGINS.md  README.md  agimate_desktop.spec  build.py  build_appimage.sh  build_dmg.sh  config.json  entrypoint  main.py  main_new.py  pyproject.toml  requirements.txt  system_agent.spec
config/: app_config.json
core/: __init__.py  action_types.py  api_endpoints.py  application.py  config_manager.py  constants.py  device_info.py  di_container.py  event_bus.py  mcp_server.py  models.py  paths.py  platform_commands.py  plugin_base.py  plugin_manager.py  protocols.py  retry.py  server_client.py  tool_types.py
plugins/: __init__.py
plugins/actions/: __init__.py
plugins/actions/show_notification/: __init__.py  config.json  plugin.py  test_plugin.py
plugins/actions/tts/: __init__.py  config.json  plugin.py  test_plugin.py
plugins/tools/: __init__.py
plugins/tools/list_files/: plugin.py
plugins/tools/screenshot/: __init__.py  plugin.py  test_plugin.py
plugins/tools/show_notification/: __init__.py  plugin.py  test_plugin.py
plugins/tools/system_info/: __init__.py  plugin.py
plugins/tools/system_info/collectors/: cpu_info.py  disk_info.py  memory_info.py  network_info.py  (+3 more)
plugins/tools/tts/: __init__.py  plugin.py  test_plugin.py
plugins/tools/window_list/: __init__.py  plugin.py
plugins/triggers/: __init__.py
plugins/triggers/file_watcher/: __init__.py  config.json  plugin.py  test_plugin.py
plugins/triggers/visual_buttons/: __init__.py  config.json  plugin.py  test_plugin.py
tests/: conftest.py  test_application.py  test_config_manager.py  test_device_info.py  test_di_container.py  test_event_bus.py  test_eventbus_integration.py  test_models.py  test_paths.py  test_plugin_base.py  test_plugin_config_validation.py  test_plugin_manager.py  test_retry.py  test_server_client.py  test_settings_validation.py  test_tray.py
ui/: __init__.py  settings.py  tray.py
(+5 files in other folders)
