[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agimate-desktop"
version = "0.1.0"
description = "Cross-platform system tray agent with plugin architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agimate"}
]
dependencies = [
    "PySide6>=6.5.0",
    "qasync>=0.27.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.7.0",
    "pytest-mock>=3.10.0",
]
server = [
    "aiohttp>=3.9.0",
    "centrifuge-python>=0.4.0",
]
tts = [
    "pyttsx3>=2.90",
]

[project.scripts]
agimate-desktop = "main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests", "plugins"]  # Ищем тесты в tests/ и plugins/
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=core",
    "--cov=plugins",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70"
]
